--- a/pulsing-motion/pulsing-motion.html
+++ b/pulsing-motion/pulsing-motion.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="wave.js"></script>
+	<script type="text/javascript" src="pulsing-motion.js"></script>
 	<script type="text/javascript" src="../utils.js"></script>
 </head>
 <body>
@@ -10,19 +9,21 @@
 <script type="text/javascript">
 	var canvas=document.getElementById('canvas');
 	var context=canvas.getContext('2d');
-	var wave=new Wave();
-	var angle=0;
-	wave.x=canvas.width/2;
-	wave.y=canvas.height/2;
-
+	var linear=new Linear(),
+		centerScale=1,
+		range=0.5,
+		angle=0,
+		speed=0.05;
+		linear.x=canvas.width/2;
+		linear.y=canvas.height/2;
 	(function drawFrame() {
 		// body...
 		window.requestAnimationFrame(drawFrame);
 		context.clearRect(0,0,canvas.width,canvas.height);
-		wave.y=canvas.height/2+Math.sin(angle)*50;
-		angle+=0.1;
-		wave.draw(context);
-	}())
+		linear.scaleX=linear.scaleY=centerScale+Math.sin(angle)*range;
+		angle+=speed;
+		linear.draw(context);
+	}());
 </script>
 </body>
 </html>
